# naama

./: Cargo.toml  Makefile  README.md
engine/: Cargo.toml
engine/src/: lib.rs  prelude.rs
engine/src/devices/: mod.rs
engine/src/loader/: asset.rs  mod.rs  vst.rs
engine/src/supervisor/: linker.rs  mod.rs
examples/vst/: README.md
host/: Cargo.toml
host-cli/: Cargo.toml
host-cli/src/: main.rs
host/src/: main.rs
host/src/gui/: mod.rs
host/src/gui/layouts/: win_host.glade
lib/vst-rs/src/: host.rs  interfaces.rs  plugin.rs
src/: asset.rs  clock.rs  device.rs  main copy.rs  main.rs  plugin.rs
