[package]
name = "host-cli"
version = "0.1.0"
authors = ["asyade <zarandifar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.7"
failure = "^0.1"
engine = { path= "../engine" }
clap = "^2.33"
