[package]
name = "host"
version = "0.1.0"
authors = ["asyade <zarandifar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claxon = "0.4.2"
winit = "0.20.0-alpha4"
log = "^0.4"
env_logger = "^0.7"
raw-window-handle = "0.3.1"
failure = "0.1.6"
engine = { path= "../engine" }